--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: AI-BOX # the website title (if blank, full name will be used instead)
+title: Hyun-seok Jung's AI-BOX # the website title (if blank, full name will be used instead)
 first_name: Hyun-seok
 middle_name: 
 last_name: Jung
