--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
 # -----------------------------------------------------------------------------
 # 기본 사이트 정보
 # -----------------------------------------------------------------------------
-title: Hyun-seok Jung's Portfolio
-first_name: Hyun-seok
-last_name: Jung
-email: your_email@gmail.com     # 👉 실제 이메일로 바꿔쓰기
-description: AI Engineer & Researcher Portfolio
+title: "Hyun-seok Jung's Portfolio"
+first_name: "Hyun-seok"
+last_name: "Jung"
+email: your_email@gmail.com  # 👉 실제 이메일로 바꿔쓰기
+description: "AI Engineer & Researcher Portfolio"
+
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with
   <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 # -----------------------------------------------------------------------------
-# URL 설정 (GitHub Pages 핵심)
+# GitHub Pages URL 설정(절대 실수하면 안 되는 핵심!)
 # -----------------------------------------------------------------------------
-url: "https://ddobal.github.io"  # 깃허브 사용자 페이지 주소
-baseurl: "/AI-BOX"               # 리포지토리 이름 (대소문자 포함 정확히)
+url: "https://ddobal.github.io"     # 사용자 깃허브 주소
+baseurl: "/AI-BOX"                  # 리포지토리 이름(대소문자 완벽히 동일)
 
-# 예: 실제 접속 URL은 https://ddobal.github.io/AI-BOX/
+# 최종 접속 URL = https://ddobal.github.io/AI-BOX/
 
 # -----------------------------------------------------------------------------
 # 언어 / 테마 / 타임존
@@ -26,16 +27,13 @@ lang: ko
 timezone: Asia/Seoul
 
 # -----------------------------------------------------------------------------
-# SEO & 피드 관련
+# SEO / RSS / 사이트맵
 # -----------------------------------------------------------------------------
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
 
-# -----------------------------------------------------------------------------
-# 마크다운 / 빌드 설정
-# -----------------------------------------------------------------------------
 markdown: kramdown
 highlighter: rouge
 
@@ -45,25 +43,24 @@ kramdown:
 
 permalink: /:categories/:title/
 
-# Jekyll이 무시할 파일/폴더 (필요 시 추가)
+# -----------------------------------------------------------------------------
+# Jekyll이 무시해야 하는 파일들
+# -----------------------------------------------------------------------------
 exclude:
   - node_modules
   - vendor
-  - Gemfile.lock
+  - Gemfile.lock     # ❗ 반드시 제외(빌드 에러 원인 1위)
   - README.md
   - .github/
 
 # -----------------------------------------------------------------------------
-# 컬렉션 설정 (원하면 나중에 projects, talks 등 확장 가능)
+# Posts 기본 설정
 # -----------------------------------------------------------------------------
 collections:
   posts:
     output: true
     permalink: /blog/:title/
 
-# -----------------------------------------------------------------------------
-# 기본 메타데이터 (페이지 front matter에서 안 적었을 때 사용)
-# -----------------------------------------------------------------------------
 defaults:
   - scope:
       path: ""
@@ -73,10 +70,7 @@ defaults:
       author: "Hyun-seok Jung"
 
 # -----------------------------------------------------------------------------
-# 네비게이션 및 화면 옵션 (필요 시 점점 추가)
+# 네비게이션 옵션 (원하면 나중에 메뉴 추가 가능)
 # -----------------------------------------------------------------------------
 navbar:
   style: dark
-
-# 홈에서 news/selected_papers 등을 쓸지 여부
-# (about.md front matter에서도 개별 설정 가능)
