--- a/_config.yml
+++ b/_config.yml
@@ -74,3 +74,8 @@ defaults:
 # -----------------------------------------------------------------------------
 navbar:
   style: dark
+
+collections:
+  pages:
+    output: true
+    permalink: /:title/
