--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,27 +1,20 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll site to Pages
 
 on:
-  # main 브랜치에 push 될 때마다 실행
   push:
     branches: ["main"]
-
-  # Actions 탭에서 수동 실행도 가능
   workflow_dispatch:
 
-# GITHUB_TOKEN 권한 설정 (Pages 배포에 필요)
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
-# 동시에 여러 배포가 겹치지 않도록 설정
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -29,32 +22,31 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Ruby
-        # Ruby 3.0 사용 (al-folio와 호환 잘 됨)
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          ruby-version: "3.1"
           bundler-cache: true
-          cache-version: 0
 
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
 
       - name: Build with Jekyll
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_url }}"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./_site
 
-  # Deployment job
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
