--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+third_party_libraries: []   # ← 대괄호만, 따옴표 절대 X
+
 markdown: kramdown
 highlighter: rouge
 
@@ -73,8 +75,6 @@ defaults:
 # -----------------------------------------------------------------------------
 navbar:
   style: dark
-
-third_party_libraries: []
 
 collections:
   pages:
