--- a/_config.yml
+++ b/_config.yml
@@ -1,63 +1,28 @@
-# -----------------------------------------------------------------------------
-# 기본 사이트 정보
-# -----------------------------------------------------------------------------
-title: "Hyun-seok Jung's Portfolio"
-first_name: "Hyun-seok"
-last_name: "Jung"
-email: your_email@gmail.com  # 👉 실제 이메일로 바꿔쓰기
-description: "AI Engineer & Researcher Portfolio"
+# Site settings
+title: "Hyun-seok Jung's AI-BOX"
+email: ddobal@gmail.com
+description: >-
+  Personal research blog.
+baseurl: "/AI-BOX"
+url: "https://ddobal.github.io"
 
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with
-  <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+# Theme
+theme: al-folio
 
-# -----------------------------------------------------------------------------
-# GitHub Pages URL 설정(절대 실수하면 안 되는 핵심!)
-# -----------------------------------------------------------------------------
-url: "https://ddobal.github.io"     # 사용자 깃허브 주소
-baseurl: ""                  # 리포지토리 이름(대소문자 완벽히 동일)
+# Build settings
+markdown: kramdown
+highlighter: rouge
 
-# 최종 접속 URL = https://ddobal.github.io/AI-BOX/
-
-# -----------------------------------------------------------------------------
-# 언어 / 테마 / 타임존
-# -----------------------------------------------------------------------------
-lang: ko
-timezone: Asia/Seoul
-
-# -----------------------------------------------------------------------------
-# SEO / RSS / 사이트맵
-# -----------------------------------------------------------------------------
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-paginate
+  - jekyll-scholar
 
-third_party_libraries:
-  download: false
+paginate: 5
 
-markdown: kramdown
-highlighter: rouge
-
-kramdown:
-  input: GFM
-  hard_wrap: false
-
-permalink: /:categories/:title/
-
-# -----------------------------------------------------------------------------
-# Jekyll이 무시해야 하는 파일들
-# -----------------------------------------------------------------------------
-exclude:
-  - node_modules
-  - vendor
-  - Gemfile.lock     # ❗ 반드시 제외(빌드 에러 원인 1위)
-  - README.md
-  - .github/
-
-# -----------------------------------------------------------------------------
-# Posts 기본 설정
-# -----------------------------------------------------------------------------
+# Collections
 collections:
   posts:
     output: true
@@ -75,16 +40,45 @@ collections:
     output: true
     permalink: /projects/:path/
 
+  publications:
+    output: true
+    permalink: /publications/:path/
+
+# Defaults
 defaults:
   - scope:
       path: ""
       type: "posts"
     values:
-      layout: post
-      author: "Hyun-seok Jung"
+      layout: "post"
 
-# -----------------------------------------------------------------------------
-# 네비게이션 옵션 (원하면 나중에 메뉴 추가 가능)
-# -----------------------------------------------------------------------------
-navbar:
-  style: dark
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
+
+  - scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "project"
+
+  - scope:
+      path: ""
+      type: "publications"
+    values:
+      layout: "publication"
+
+# Scholar (for Google Scholar bibtex)
+scholar:
+  style: apa
+  locale: en
+
+# Exclude
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor
+  - README.md
